test/files/neg/t3453.check
t3453.scala:16: error: type mismatch;
 found   : A
 required: B
        new A
        ^
one error found
